--- a/style.css
+++ b/style.css
@@ -10,13 +10,11 @@ body {
     transition: background 0.4s ease, box-shadow 0.4s ease;
 }
 
-  .navbar-custom {
-    background: linear-gradient(90deg, #aa0000, #d32f2f);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  }
-  .footer.custom {
-    background: linear-gradient(90deg, #aa0000, #d32f2f);
-  }
+#navbar.scrolled {
+    background: rgba(178, 34, 34, 0.95);
+    /* rojo elegante con transparencia */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+}
 
 .nav-link {
     position: relative;
@@ -212,6 +210,8 @@ body {
   box-shadow: 0 5px 15px rgba(178, 34, 34, 0.4);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
-.footer-custom {
-    background: linear-gradient(90deg, #aa0000, #d32f2f);
-  }
+
+.btn-shadow:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(178, 34, 34, 0.5);
+}
