--- a/style.css
+++ b/style.css
@@ -15,9 +15,11 @@ body {
   /* rojo elegante con transparencia */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
 }
-#navbarUno{
-    background-color:rgba(178, 34, 34, 0.95) ;
+
+#navbarUno {
+  background-color: rgba(178, 34, 34, 0.95);
 }
+
 .nav-link {
   position: relative;
   font-weight: 500;
@@ -227,7 +229,7 @@ body {
 .mi-boton:focus,
 .mi-boton:active {
   background: black;
-   outline:   none;
+  outline: none;
 }
 
 .form-control:focus {
@@ -283,19 +285,43 @@ body {
   transform: translateY(-3px);
   box-shadow: 0 8px 20px rgba(178, 34, 34, 0.5);
 }
-.title_class{
-    font-family: 'Abril Fatface', serif;
-    color: #000000;
-    font-weight: 700;
-    margin-top: 20px;
-    margin-bottom: 20px;
+
+.title_class {
+  font-family: 'Abril Fatface', serif;
+  color: #000000;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  position: margin auto;
 }
-.p_notice{
-    font-family: 'Great Vibes', cursive;
-    color: #333333;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    margin: 20px auto;
-    max-width: 800px;
-    text-align: justify;
+
+.titleSecondary_class {
+  font-family: 'Abril Fatface', serif;
+  color: #000000;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  position: margin auto;
+}
+
+.p_notice {
+  font-family: 'Great Vibes', cursive;
+  color: #333333;
+  font-size: 1.1rem;
+  line-height: 1.6;
+  margin: 20px auto;
+  max-width: 800px;
+  text-align: justify;
+}
+
+.containerSoporte{
+  margin-right: 1000px;
+}
+
+.titulo{
+  margin-right:220px;
+}
+.conatinerSearch{
+  padding-top: 100px;
 }
