--- a/style.css
+++ b/style.css
@@ -314,7 +314,26 @@ body {
   max-width: 800px;
   text-align: justify;
 }
+#nombre:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.5);
+  /* rojo con transparencia */
+}
 
-.conatinerSearch{
-  padding-top: 100px;
+#correo:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.5);
+  /* rojo con transparencia */
+}
+
+#phone:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.5);
+  /* rojo con transparencia */
+}
+
+#consulta:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.5);
+  /* rojo con transparencia */
 }
