--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ body {
   background-color: #f5f5f5;
   border-radius: 15px;
   padding: 30px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 15px rgb(126, 30, 30);
 }
 
 .detalle-card h2 {
